# gen_readme

./: CONTRIBUTING.md  Dockerfile  README.md  _config.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: gen_readme_bug_report.md  gen_readme_feature_request.md
.github/workflows/: gen_readme_docker_checker.yml  gen_readme_package.yml  gen_readme_package_checker.yml  gen_readme_py_checker.yml  gen_readme_python2_publish.yml  gen_readme_python3_build.yml  gen_readme_python3_publish.yml  gen_readme_python_checker.yml  gen_readme_toc.yaml  gen_readme_triage.yml  gen_readme_triage_label.yml
docs/source/: conf.py  gen_readme.pro.read_template.rst  gen_readme.pro.write_template.rst  gen_readme.rst  index.rst
gen_readme/: __init__.py
gen_readme/conf/: gen_readme.cfg  gen_readme.logo  project.yaml
gen_readme/conf/template/: README_AVR.template  README_C.template  README_CC.template  README_JS.template  README_PL.template  README_PY.template  README_RPI.template  README_SH.template  README_STM.template  README_VALA.template
gen_readme/pro/: __init__.py  read_template.py  write_template.py
gen_readme/run/: gen_readme_run.py
tests/: .coverage  gen_readme  gen_readme_sub_test.py  gen_readme_test.py  read_template_test.py  run_coverage.sh  write_template_test.py
tests/full_simple_new/: README.md
tests/latest_pro/: README.md
tests/simple_write/: README.md
